STARCH-711 module configuration updates